# px4_vision_landing_staticTag

./: LICENSE  README.md  apriltag_land.rviz  package.xml  setup.cfg  setup.py
analysis/: plot_tf_logs.py
config/: apriltag.yaml  frames.yaml
launch/: apriltag_pipeline.launch.py  landing.launch.py
models/apriltag_1000mm/: model.config  model.sdf
models/x500_mono_cam_down/: model.sdf
px4_logs/: px4_state_raw_tag_kf_filtered.csv
px4_vision_landing_staticTag/: apriltag_relative_pose.py  offboard_experiment_manager.py  tag_pose_kf.py  tag_rviz_markers.py  tf_state_logger.py  vision_guidance_controller.py
px4_vision_landing_staticTag/utils/: common.py  metrics.py  px4_commands.py  trajectories.py
worlds/: px4_vision_landing_staticTag.sdf
