<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>px4_vision_landing_staticTag</name>
  <version>0.0.0</version>
  <description>AprilTag-based precision landing for PX4 using vision feedback</description>
  <maintainer email="u1999097@campus.udg.edu">priyam22</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>px4_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>geometry_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>  
    <build_type>ament_python</build_type>
  </export>
</package>
